<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Cmd_Typ" Id="{9dd30800-f962-4941-830f-19192cd3f97c}">
    <Declaration><![CDATA[TYPE Cmd_Typ :
STRUCT
	Start:BOOL;
	SwitchOn:BOOL;
	Manual:BOOL;
	Stop:BOOL;
	EmStop:BOOL;
	
	UW_1_Cmd : UnwindCmd_Typ;
	UW_2_Cmd : UnwindCmd_Typ;

	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>